--- a/src/css/App.css
+++ b/src/css/App.css
@@ -120,7 +120,7 @@ html, body, #root {
   display: flex;
   flex: 1;
   height: calc(100vh - 40px);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .content {
